update: activation email

--- a/bbsittingsharing/templates/registration/activation_complete.html
+++ b/bbsittingsharing/templates/registration/activation_complete.html
@@ -1,1 +1,5 @@
-Success
+{% extends 'base.html' %}
+{% load i18n %}
+{% block content %}
+{% trans "Your registration is now complete. Thanks!" %}
+{% endblock %}
