--- a/bbsittingsharing/templates/registration/login.html
+++ b/bbsittingsharing/templates/registration/login.html
@@ -5,7 +5,7 @@
 <div id="pagetitle">{% trans 'Login' %}</div>
 
 {% if form.errors %}
-<p>{% trans 'Your username and password didn''t match. Please try again.' %}</p>
+<p>{% trans "Your username and password didn't match. Please try again." %}</p>
 {% endif %}
 
 <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
