--- a/bbsittingsharing/static/css/bbsittingsharing.css
+++ b/bbsittingsharing/static/css/bbsittingsharing.css
@@ -69,6 +69,9 @@ footer a {
     margin-right: auto;
 }
 
+img.profile {
+    max-width: 90%;
+}
 #calendar-right .fc-right {
     display: none;
 }
