--- a/bbsittingsharing/templates/bbsittingsharing/bbsitting_detail.html
+++ b/bbsittingsharing/templates/bbsittingsharing/bbsitting_detail.html
@@ -2,5 +2,14 @@
 {% load i18n %}
 {% load bootstrap %}
 {% block content %}
-{{bbsitting}}
+<div>{% blocktrans with name=bbsitting.author.get_full_name %}At {{name}}'s{% endblocktrans %}</div>
+<div>{% trans "On" %} {{bbsitting.date}}</div>
+<div>{% trans "From" %} {{bbsitting.start}}</div>
+
+<div>
+    {{bbsitting.booked.count}} {% trans "spots booked out of" %} {{bbsitting.children_capacity}}
+    {% if bbsitting.booked.count < bbsitting.children_capacity %}
+    - <a href="{% url 'book' bbsitting.pk %}">{% trans "book" %}</a>
+    {% endif %}
+</div>
 {% endblock %}
