--- a/bbsittingsharing/templates/bbsittingsharing/parent_detail.html
+++ b/bbsittingsharing/templates/bbsittingsharing/parent_detail.html
@@ -21,14 +21,15 @@
 <div class="col-sm-7 panel panel-margin">
     <h3>{{profile.first_name}} {{profile.last_name}}</h3>
     <p>{{profile.phone}}</p>
-    <p>{{profile.kidsnb}}</p>
-    <p>{{profile.groups.first}}</p>
-    <p>{{profile.school}}</p>
-    <p>{{profile.bbsitter}}</p>
+    <p>{{profile.kidsnb}} {% trans "kids" %}</p>
+    <p>{% trans "District:" %} {{profile.groups.first}}</p>
+    <p>{% trans "School:" %} {{profile.school}}</p>
+    <p>{% trans "Usual bbsitter:" %} {{profile.bbsitter}}</p>
+    <p>{{profile.bbsitting_set.count}} {% trans "bbsitting already shared" %}</p>
     <a class="btn btn-danger" href="{% url 'profile_edit' user.username %}">{% trans "Edit" %}</a>
 </div>
 <div class="col-sm-3 panel panel-margin">
-    <a class="btn btn-primary">{% trans "Upload a picture" %}</a>
+    <img class="profile" alt="{% blocktrans with name=profile.username%}{{username}}'s picture{% endblocktrans %} '" src="{{profile.picture.url}}" />
 </div>
 <div class="col-sm-3 panel panel-margin">
     <h3>{% trans "My friends" %}</h3>
@@ -38,8 +39,8 @@
 
 <div class="col-sm-10 panel panel-margin">
     <h3>{% trans "Your planned babysittings" %}</h3>
-    <input id="searchdate"/>
-    <button class="btn btn-danger" onclick="document.location = '/search/'+document.getElementById('searchdate').value">{% trans 'Search' %}</button>
+    {% comment %}<input id="searchdate"/>
+    <button class="btn btn-danger" onclick="document.location = '/search/'+document.getElementById('searchdate').value">{% trans 'Search' %}</button>{% endcomment %}
     <a class="btn btn-danger" href="{% url 'new' %}">{% trans "Propose a date" %}</a>
 </div>
 {% endwith %}
