feature: friends list page

--- a/bbsittingsharing/templates/bbsittingsharing/parent_detail.html
+++ b/bbsittingsharing/templates/bbsittingsharing/parent_detail.html
@@ -33,7 +33,7 @@
 </div>
 <div class="col-sm-3 panel panel-margin">
     <h3>{% trans "My friends" %}</h3>
-    <a class="btn btn-danger">{% trans "See all my friends" %}</a>
+    <a class="btn btn-danger" href="{% url 'friends' %}">{% trans "See all my friends" %}</a>
 </div>
 <div class="clearfix"></div>
 
