--- a/bbsittingsharing/templates/registration/registration_form.html
+++ b/bbsittingsharing/templates/registration/registration_form.html
@@ -3,7 +3,7 @@
 {% load bootstrap %}
 {% block content %}
 <div id="pagetitle">{% trans 'Register' %}</div>
-
+salut les copains
 <form method="post">
     {% csrf_token %}
     {{form|bootstrap}}
