bugfix: full urls in emails

--- a/bbsittingsharing/templates/notification/book_request.html
+++ b/bbsittingsharing/templates/notification/book_request.html
@@ -2,4 +2,4 @@
 <p>{% trans "Hello" %}.</p>
 <p>{{from}} {% trans "wants to book the bbsitting on" %} {{booking.bbsitting.date}}.</p>
 <p>{% trans "To validate it, please go to:" %}
-{% url 'validate' pk=booking.bbsitting.pk booking_pk=booking.pk %}</p>
+http://{{request.get_host}}{% url 'validate' pk=booking.bbsitting.pk booking_pk=booking.pk %}</p>
