--- a/bbsittingsharing/templates/notification/refer_request.html
+++ b/bbsittingsharing/templates/notification/refer_request.html
@@ -3,4 +3,4 @@
 
 <p>{% blocktrans %}You have been invited by {{referer}} to join BBSitting Sharing.
 Please go to: {% endblocktrans %}
-{% url 'registration_register' %}?referer={{referer.username}}</p>
+http://{{request.get_host}}{% url 'registration_register' %}?referer={{referer.username}}</p>
