update: added a timepicker ui: updated colors

--- a/bbsittingsharing/templates/bbsittingsharing/parent_detail.html
+++ b/bbsittingsharing/templates/bbsittingsharing/parent_detail.html
@@ -13,35 +13,36 @@
 <div id="pagetitle">
     <h2>{% trans "Welcome" %} {{profile.first_name}} !</h2>
     {% if profile == user %}
-    <a class="btn btn-danger" href="{% url 'agenda' %}">{% trans "Calendar" %}</a>
-    <a class="btn btn-danger" href="{% url 'refer' %}">{% trans "Refer" %}</a>
+    <a class="btn" href="{% url 'agenda' %}">{% trans "Calendar" %}</a>
+    <a class="btn" href="{% url 'refer' %}">{% trans "Refer" %}</a>
     {% endif %}
 </div>
 
 <div class="col-sm-7 panel panel-margin">
     <h3>{{profile.first_name}} {{profile.last_name}}</h3>
     <p>{{profile.phone}}</p>
-    <p>{{profile.kidsnb}} {% trans "kids" %}</p>
+    <p><span class="number">{{profile.kidsnb|default:0}}</span> {% trans "kids" %}</p>
     <p>{% trans "District:" %} {{profile.groups.first}}</p>
     <p>{% trans "School:" %} {{profile.school}}</p>
     <p>{% trans "Usual bbsitter:" %} {{profile.bbsitter}}</p>
-    <p>{{profile.bbsitting_set.count}} {% trans "bbsitting already shared" %}</p>
-    <a class="btn btn-danger" href="{% url 'profile_edit' user.username %}">{% trans "Edit" %}</a>
+    <p><span class="number">{{profile.bbsitting_set.count}}</span> {% trans "bbsitting already shared" %}</p>
+    <a class="btn" href="{% url 'profile_edit' user.username %}">{% trans "Edit" %}</a>
 </div>
 <div class="col-sm-3 panel panel-margin">
     <img class="profile" alt="{% blocktrans with name=profile.username%}{{username}}'s picture{% endblocktrans %} '" src="{{profile.picture.url}}" />
 </div>
 <div class="col-sm-3 panel panel-margin">
     <h3>{% trans "My friends" %}</h3>
-    <a class="btn btn-danger" href="{% url 'friends' %}">{% trans "See all my friends" %}</a>
+    <a class="btn" href="{% url 'friends' %}">{% trans "See all my friends" %}</a>
 </div>
 <div class="clearfix"></div>
 
 <div class="col-sm-10 panel panel-margin">
     <h3>{% trans "Your planned babysittings" %}</h3>
     {% comment %}<input id="searchdate"/>
-    <button class="btn btn-danger" onclick="document.location = '/search/'+document.getElementById('searchdate').value">{% trans 'Search' %}</button>{% endcomment %}
-    <a class="btn btn-danger" href="{% url 'new' %}">{% trans "Propose a date" %}</a>
+    <button class="btn" onclick="document.location = '/search/'+document.getElementById('searchdate').value">{% trans 'Search' %}</button>{% endcomment %}
+    <a class="btn" href="{% url 'agenda' %}">{% trans "Calendar" %}</a>
+    <a class="btn" href="{% url 'new' %}">{% trans "Propose a date" %}</a>
 </div>
 {% endwith %}
 {% endblock %}
