--- a/bbsittingsharing/static/css/bbsittingsharing.css
+++ b/bbsittingsharing/static/css/bbsittingsharing.css
@@ -1,31 +1,49 @@
+/*
+le bleu ciel:   #67acf2
+le rouge:       #fc5151
+le gris clair:  #f2f0ed
+le bleu foncé:  #183c77
+*/
+@font-face {
+    font-family: "Gotham";
+    src: url('/static/fonts/Gotham-Medium.ttf');
+}
 html {
     position: relative;
     min-height: 100%;
 }
 body {
-    margin-bottom: 150px;
+    font-family: "Gotham",Helvetica,Arial,sans-serif;
+    margin-bottom: 190px;
     background-color: #E8E8E8;
 }
 header {
-    background: white;
+    height: 140px;
     padding: 2em;
-    margin-bottom: 3em;
+    background: white;
 }
 header h1 {
     margin: auto;
     width: 20em;
     text-align: center;
-    color: blue;
+    color: #fc5151;
+}
+header h1 a {
+    color: #183c77;
 }
 #pagetitle {
     width: 50%;
-    margin: 2em auto;
+    margin: 100px auto;
     padding: 1.2em;
-    background: blue;
+    background: #67acf2;
+    border-radius: 15px;
     color: white;
     text-align: center;
     font-size: 1.2em;
     font-weight: bold;
+}
+#pagetitle .btn {
+    background: white;
 }
 main form {
     width: 50%;
@@ -35,13 +53,16 @@ footer {
     position: absolute;
     bottom: 0px;
     width: 100%;
-    height: 120px;
-    padding: 2em;
-    background: blue;
+    height: 160px;
+    padding: 5em;
+    background: #67acf2;
     color: white;
     text-transform: uppercase;
     text-align: center;
     font-weight: bold;
+}
+footer ul {
+   list-style-type: none;
 }
 footer a {
     color: white;
@@ -50,15 +71,24 @@ footer a {
 .panel {
     padding: 2em;
     background: white;
-    color: blue;
+    border-radius: 10px;
+    color: #183c77;
 }
 .panel h3 {
     text-align: center;
+}
+.panel .btn {
+    background: #fc5151;
+    color: white;
 }
 .panel p {
     margin: 2em;
     padding: 1em 0;
     border-top: solid #E8E8E8 1px;
+}
+.panel .number {
+    font-size: 2em;
+    color: #fc5151;
 }
 .panel-margin {
     margin: 2em;
