--- a/bbsittingsharing/templates/base.html
+++ b/bbsittingsharing/templates/base.html
@@ -12,7 +12,8 @@
         <script src='{% static "js/jquery.min.js" %}'></script>
         <script src='{% static "js/moment.min.js" %}'></script>
         <script src='{% static "js/bootstrap.js" %}'></script>
-        <script src='{% static "js/bootstrap-datepicker.js" %}'></script>
+        <script src='{% static "js/moment-locale/"|add:LANGUAGE_CODE|add:".js" %}'></script>
+        <script src='{% static "js/bootstrap-datetimepicker.min.js" %}'></script>
         <script src='{% static "js/fullcalendar.js" %}'></script>
         <script src='{% static "js/bbsittingsharing.js" %}'></script>
         {% block scripts %}{% endblock %}
