--- a/bbsittingsharing/templates/bbsittingsharing/bbsitting_form.html
+++ b/bbsittingsharing/templates/bbsittingsharing/bbsitting_form.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 {% load i18n %}
 {% load bootstrap %}
 {% block scripts %}
+
 <script>
     window.onload = function() {
-        $('#id_date').datepicker({format: "yyyy-mm-dd",todayHighlight: true})
+        $('#id_date').datetimepicker({format: "LL"});
+        $('#id_start').datetimepicker({format: 'LT'});
     };
 </script>
 {% endblock %}
