bugfix: fixed date/time format

--- a/bbsittingsharing/templates/bbsittingsharing/bbsitting_form.html
+++ b/bbsittingsharing/templates/bbsittingsharing/bbsitting_form.html
@@ -6,8 +6,8 @@
 
 <script>
     window.onload = function() {
-        $('#id_date').datetimepicker({format: "LL"});
-        $('#id_start').datetimepicker({format: 'LT'});
+        $('#id_date').datetimepicker({format: "DD/MM/YYYY"});
+        $('#id_start').datetimepicker({format: 'HH:mm'});
     };
 </script>
 {% endblock %}
