--- a/bbsittingsharing/templates/bbsittingsharing/parent_detail.html
+++ b/bbsittingsharing/templates/bbsittingsharing/parent_detail.html
@@ -39,6 +39,9 @@
 
 <div class="col-sm-10 panel panel-margin">
     <h3>{% trans "Your planned babysittings" %}</h3>
+    {% for bbsitting in profile.bbsitting_set.all %}
+        <p>{{bbsitting}}</p>
+    {% endfor %}
     {% comment %}<input id="searchdate"/>
     <button class="btn" onclick="document.location = '/search/'+document.getElementById('searchdate').value">{% trans 'Search' %}</button>{% endcomment %}
     <a class="btn" href="{% url 'agenda' %}">{% trans "Calendar" %}</a>
