--- a/bbsittingsharing/templates/info.html
+++ b/bbsittingsharing/templates/info.html
@@ -4,11 +4,11 @@
 
 
 <div id="pagetitle">
-    <h2>{% trans "Should we organize to share a babysitting?" %}</h2>
+    <h5>{% trans "Should we organize to share a babysitting?" %}</h5>
     <nav class="btn-group">
         <ul>
-            <li class="btn btn-default"><a href="{% url 'registration_register' %}">{% trans "Register" %}</a></li>
-            <li class="btn btn-default"><a href="{% url 'auth_login' %}">{% trans "Login" %}</a></li>
+            <li class="btn"><a href="{% url 'registration_register' %}">{% trans "Register" %}</a></li>
+            <li class="btn"><a href="{% url 'auth_login' %}">{% trans "Login" %}</a></li>
         </ul>
     </nav>
 </div>
