--- a/bbsittingsharing/templates/bbsittingsharing/friends_list.html
+++ b/bbsittingsharing/templates/bbsittingsharing/friends_list.html
@@ -2,6 +2,7 @@
 {% load i18n %}
 
 {% block content %}
+<div class="panel">
     <div class="col-md-6">
         <h3>{% trans "My friends" %}</h3>
         {% include "bbsittingsharing/friends.html" with users=friends %}
@@ -10,4 +11,6 @@
         <h3>{% trans "My neighbours" %}</h3>
         {% include "bbsittingsharing/friends.html" with users=neighbours %}
     </div>
+    <div class="clearfix"></div>
+</div>
 {% endblock %}
