--- a/bbsittingsharing/templates/base.html
+++ b/bbsittingsharing/templates/base.html
@@ -21,7 +21,7 @@
     <body>
         <header>
             <h1>
-                <a href="{% url 'index' %}">Baby Sitting sharing</a>
+                <a href="{% url 'index' %}">Bbsitting sharing</a>
                 <div>by Echos Kids</div>
             </h1>
             {% if user.is_authenticated %}
