--- a/bbsittingsharing/templates/registration/logout.html
+++ b/bbsittingsharing/templates/registration/logout.html
@@ -5,4 +5,5 @@
 <div id="pagetitle">
     {% trans "Thanks for using BBSitting Sharing!" %}
 </div>
+<a class="btn panelbtn pull-right" href="{% url 'index' %}">{% trans "Home" %}</a>
 {% endblock %}
