--- a/bbsittingsharing/static/css/bbsittingsharing.css
+++ b/bbsittingsharing/static/css/bbsittingsharing.css
@@ -4,10 +4,19 @@ le bleu foncé:  #183c77
 le rouge:       #fc5151
 le rouge foncé: #cc3636
 le gris clair:  #f2f0ed
+le gris foncé:  #8c8c8c
 */
 @font-face {
     font-family: "Gotham";
+    src: url('/static/fonts/Gotham-Light.ttf');
+}
+@font-face {
+    font-family: "Gotham";
+    font-weight: bold;
     src: url('/static/fonts/Gotham-Medium.ttf');
+}
+h1, h2, h3, h4, h5, .btn, .panel {
+    font-weight: bold;
 }
 html {
     position: relative;
@@ -15,8 +24,9 @@ html {
 }
 body {
     font-family: "Gotham",Helvetica,Arial,sans-serif;
+    color: #183c77;
     margin-bottom: 190px;
-    background-color: #E8E8E8;
+    background-color: #f2f0ed;
 }
 header {
     height: 140px;
@@ -37,28 +47,37 @@ header h1 a {
     font-size: .8em;
     letter-spacing: 5px;
 }
+header nav {
+    float: right;
+    font-weight: bold;
+}
+header nav ul {
+    list-style-type: none;
+    padding: 0;
+}
 #pagetitle {
-    width: 100%;
+    position: relative;
+    width: 70%;
     margin: 1em auto;
     padding: 1.2em;
     background: #67acf2;
     border-radius: 15px;
     color: white;
     text-align: center;
-    font-size: 1.2em;
+    font-size: 1.5em;
     font-weight: bold;
 }
 #pagetitle .btn {
     background: white;
-    margin: .5em;
+    margin: 1.5em;
     width: 8em;
 }
 #pagetitle nav {
-   width: 100%;
+wi  dth: 100%;
 }
 #pagetitle ul {
-   list-style-type: none;
-   padding: 0;
+    list-style-type: none;
+    padding: 0;
 }
 main form {
     width: 50%;
@@ -77,7 +96,7 @@ footer {
     font-weight: bold;
 }
 footer ul {
-   list-style-type: none;
+    list-style-type: none;
 }
 footer a {
     color: white;
@@ -106,6 +125,9 @@ footer a {
     font-size: 2em;
     color: #fc5151;
 }
+.panel .glyphicon {
+    color: #F2F0ED;
+}
 .panel-margin {
     margin: 2em;
 }
@@ -115,6 +137,23 @@ footer a {
     margin-right: auto;
 }
 
+img.parents {
+    position: absolute;
+    height: 200px;
+    right: -120px;
+    top: 40px;
+}
+#info {
+    width: 80%;
+    margin: 4em auto 0 auto;
+    color: #8c8c8c;
+    text-align: justify;
+}
+#info h4 {
+    margin-bottom: 2em;
+    color: #183c77;
+    text-align: center;
+}
 .friends-title {
     text-align: center;
 }
